replace various copies of JRtaTextField with version in Libraries